[wave-share] Fix table display on mobile

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -87,3 +87,11 @@ div.emscripten_border { border: 1px solid black; }
     font-family: 'Lucida Console', Monaco, monospace;
     outline: none;
 }
+
+#table-wrap {
+  display: block;
+}
+
+#table-wrap td {
+  display: inline-block;
+}
